production/tools/tests/gaiat/arrays_test01.ruleset
////////////////////////////////////////////////////
// Copyright (c) Gaia Platform Authors
//
// Use of this source code is governed by the MIT
// license that can be found in the LICENSE.txt file
// or at https://opensource.org/licenses/MIT.
////////////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

// TESTCASE: attempt two subscripts in single-dimentional array
ruleset test01
{
    on_insert(farmer)
    {
        yield.previous_years[0][0] = 5;
    }
}

// CHECK: error: subscripted value is not an array, pointer, or vector
